@@ -526,6 +526,15 @@ also receives other options that are specific to it.<p>
         Useful for regenerating the *_include pidl files in the archive.</td>
   </tr>
 
+  <tr><a name="stripped_filename">
+    <td></td>
+
+    <td><tt>stripped_filename=</tt><i>file</i></td>
+
+    <td>File that should be generated as stripped_filename instead of taking
+        the stripped filename of the input file.</td>
+  </tr>
+
   <tr><a name="ciao_container_type">
     <td></td>
 
